--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -573,6 +573,7 @@ main {
             width: calc(100vw - 10%);
             grid-column: 1;
             padding-left: 10%;
+            transform: translate(0, 350px);
         }
     }
 
