--- a/src/styles/loading.scss
+++ b/src/styles/loading.scss
@@ -6,24 +6,31 @@ body {
 
 .loading-background {
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background-size: cover;
-    background-position: center;
-}
-
-.video-overlay {
-    content: "";
-    position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    background: #004A4E66;
-    z-index: 1;
-  }
+    z-index: -1;
+
+    .bg-video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+
+    .video-overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: var(--dark-green);
+        opacity: 0.5;
+      }
+}
+
+
 
 
 .loading-section {
@@ -33,7 +40,7 @@ body {
     position: fixed;
     top: -100px;
     width: 100%;
-    min-height: 100dvh;
+    height: 100vh;
 
     .form-1 {
         width: 800px;
