--- a/src/styles/socialine-atsakomybe.scss
+++ b/src/styles/socialine-atsakomybe.scss
@@ -188,6 +188,7 @@ header {
         .icon {
             display: flex;
             align-items: center;
+            justify-content: center;
             flex-direction: column;
             text-align: center;
             gap: 20px;
@@ -565,15 +566,28 @@ footer {
             }
 
             .swiper {
-                width: 90vw;
+                width: 100vw;
+                height: auto;
                 left: 0;
                 top: 0;
-                margin: 0;
+                margin: 100px auto;
+                .swiper-wrapper {
+                    flex-wrap: wrap;
+                    gap: 30px;
+                }
+                .swiper-slide {
+                    width: 45%;
+                    height: 60px !important;
+                    text-align: center;
+        
+                    svg {
+                        top: 0 !important;
+                        height: 50px !important;
+                    }
+                }
             }
         }
     }
-
-
     .section-3 {
         display: flex;
         flex-direction: column;
