--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -157,3 +157,19 @@ h4 {
 		fill:  var(--green-light);
 	}
 }
+
+
+.more {
+	color: var(--blue-dark);
+	text-decoration: underline;
+	display: inline-block;
+	margin: 30px 0;
+	justify-self: start;
+	transition: background 0.3s;
+
+	&:hover {
+		text-decoration: none;
+		background: var(--blue-dark);
+		color: var(--blue-extra-light);
+	}
+}
