--- a/src/styles/naujienos.scss
+++ b/src/styles/naujienos.scss
@@ -101,7 +101,8 @@ main {
         }
 
         .article-category {
-            text-decoration: underline;
+            left: 0 !important;
+            align-self: start;
         }
     }
 
