--- a/src/styles/partneriu-interviu.scss
+++ b/src/styles/partneriu-interviu.scss
@@ -205,6 +205,12 @@ main {
         grid-column: 3;
         grid-row: 4;
         margin: 30px 0;
+        color: var(--blue-dark);
+        &:hover {
+            text-decoration: none;
+            background: var(--blue-dark);
+            color: var(--blue-extra-light);
+        }
     }
 }
 
