buttons width update

--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -360,6 +360,8 @@ main {
     }
 
     .content {
+        display: flex;
+        flex-direction: column;
         color: var(--dark-green);
         grid-column: 1;
         font-weight: 400;
