--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -86,8 +86,10 @@ h4 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 250px;
-	height: 50px;
+	align-self: start;
+	padding: 0 50px;
+	min-width: 120px;
+	min-height: 50px;
 	border-radius: 0px 0px 26.5px 0px;
 	background:  var(--green-light);
 	color: var(--dark-green);
@@ -121,15 +123,20 @@ h4 {
 	.button-outline-icon {
 		position: absolute;
 		top: -2%;
-		right: -50%;
+		left: -50%;
 		width: 100%;
 		height: 105%;
+		transition: 0.3s;
 	}
 }
 
 .button-outline:hover {
 	background: var(--dark-green);
 	color: var(--green-light);
+
+	.button-outline-icon {
+		left: 50%;
+	}
 }
 
 
