--- a/src/styles/mentoryste.scss
+++ b/src/styles/mentoryste.scss
@@ -85,6 +85,8 @@ main {
     }
 
     .content-2 {
+        display: flex;
+        flex-direction: column;
         grid-row: 2;
         grid-column: 2;
         max-width: 600px;
