--- a/src/styles/pagrindines-veiklos.scss
+++ b/src/styles/pagrindines-veiklos.scss
@@ -96,6 +96,8 @@ main {
     }
 
     .content {
+        display: flex;
+        flex-direction: column;
         grid-row: 2;
         grid-column: 4/7;
         color: var(--green-light);
@@ -178,6 +180,8 @@ main {
     }
 
     .content {
+        display: flex;
+        flex-direction: column;
         grid-row: 1;
         grid-column: 1/4;
         width: 60%;
@@ -247,6 +251,8 @@ main {
     }
 
     .content {
+        display: flex;
+        flex-direction: column;
         grid-row: 1;
         grid-column: 3/5;
         width: 90%;
