--- a/src/styles/tvarumas.scss
+++ b/src/styles/tvarumas.scss
@@ -52,6 +52,8 @@ main {
 
 
     .content {
+        display: flex;
+        flex-direction: column;
         width: 70%;
         grid-column: 1/3;
         grid-row: 2/4;
