--- a/src/styles/verslo-inovaciju-labaratorija.scss
+++ b/src/styles/verslo-inovaciju-labaratorija.scss
@@ -115,6 +115,8 @@ main {
     }
 
     .content {
+        display: flex;
+        flex-direction: column;
         grid-row: 2;
         grid-column: 4/7;
         color: var(--blue-extra-light);
@@ -202,6 +204,8 @@ main {
     }
 
     .content {
+        display: flex;
+        flex-direction: column;
         grid-row: 1;
         grid-column: 1/4;
         width: 60%;
@@ -272,6 +276,8 @@ main {
     }
 
     .content {
+        display: flex;
+        flex-direction: column;
         grid-row: 1;
         grid-column: 3/5;
         width: 90%;
