soc gallery fix

--- a/src/styles/socialine-atsakomybe.scss
+++ b/src/styles/socialine-atsakomybe.scss
@@ -258,7 +258,7 @@ header {
     .image-shape {
         width: 30vw;
         height: 600px;
-        position: fixed;
+        position: absolute;
         top: 0;
         bottom: 0;
         right: 0;
