--- a/src/styles/darbo-skelbimai.scss
+++ b/src/styles/darbo-skelbimai.scss
@@ -155,11 +155,11 @@ main {
    
 
        .button-outline {
+        justify-self: start;
         grid-row: 3;
         grid-column: 3;
         border-color: var(--burgundy-dark);
         color: var(--burgundy-dark);
-        width: 100px;
 
         &:hover {
             background: var(--burgundy-dark);
