--- a/src/styles/mentoryste.scss
+++ b/src/styles/mentoryste.scss
@@ -32,7 +32,7 @@ header {
 
 main {
     min-height: 100vh;
-    max-width: 2000px;
+    max-width: 2560px;
     margin: auto;
     overflow: hidden;
 }
@@ -76,11 +76,14 @@ main {
         grid-column: 1;
         grid-row: 1;
         transform: translate(295px, 258px);
-        max-width: 600px;
 
         h1 {
             font-weight: 400;
             margin-bottom: 50px;
+        }
+
+        p {
+            max-width: 800px;
         }
     }
 
@@ -127,6 +130,7 @@ main {
 
                 img {
                     width: clamp(40px, 4vw, 81px);
+                    margin-bottom: 15px;
                 }
             }
         }
@@ -173,7 +177,19 @@ footer {
     .section-1 {
         .content {
             transform: translate(107px, 258px);
-            width: 60%;
+           
+            p {
+                width: 65%;
+            }
+        }
+
+        .content-info {
+            position: relative;
+            left: -50px;
+
+            .icons {
+                column-gap: 50px;
+            }
         }
     }
 }
@@ -215,12 +231,19 @@ footer {
 
         .content-2 {
             top: 100px;
-            transform: translate(40px, -150px);
+            transform: translate(24px, -150px);
+            width: 80%;
         }
 
         .content-info {
             grid-column: 1/3;
             grid-row: 3;
+            position: relative;
+            left: 0;
+
+            .icons {
+                column-gap: 150px;
+            }
         }
     }
 }
@@ -229,6 +252,7 @@ footer {
     .section-1 {
         .content-2 {
             top: 100px;
+            width: 100%;
             transform: translate(0, -150px);
         }
 
