--- a/src/styles/naujienos.scss
+++ b/src/styles/naujienos.scss
@@ -26,8 +26,8 @@ header {
 
 main {
     min-height: 100vh;
-    width: 100%; /* Ensure main takes full width */
-    max-width: 2560px; /* Max width for larger screens */
+    width: 100%;
+    max-width: 2560px;
     margin: auto;
     overflow: hidden;
 }
