--- a/src/styles/partneriu-interviu.scss
+++ b/src/styles/partneriu-interviu.scss
@@ -33,7 +33,7 @@ header {
 
 main {
     min-height: 100vh;
-    max-width: 2000px;
+    max-width: 2560px;
     margin: auto;
     overflow: hidden;
 }
@@ -45,7 +45,6 @@ main {
     color: var(--blue-extra-light);
 
     .content {
-        grid-column: 1/3;
         font-weight: 400;
         grid-column: 1;
         grid-row: 1;
@@ -60,7 +59,7 @@ main {
 
     .shape-1 {
         position: absolute;
-        right: 620px;
+        left: 105px;
         width: 1267.87px;
         height: 807.34px;
         z-index: -1;
@@ -84,7 +83,7 @@ main {
     grid-template-columns: repeat(6, minmax(230px, 1fr));
     grid-auto-rows: minmax(420px, auto);
     color: var(--blue-dark);
-    max-width: 2043px;
+    max-width: 2560px;
     margin: auto;
     position: relative;
 
@@ -150,7 +149,7 @@ main {
             top: -100px;
         
             img {
-                width: 100%;
+                width: 130%;
                 object-fit: contain; /* Changed from cover to contain */
             }
         
@@ -248,10 +247,25 @@ footer {
     }
 }
 
+@media (min-width: 2000px) {
+    .section-1 {
 
+        h1 {
+            right: auto;
+        }
 
+        .content {
+            right: auto;
+            left: 230px;
+        }
+    }
 
-
+    .section-2 .foto-1 {
+        right: auto;
+        left: 1716px;
+        width: 33%;
+    }
+}
 
 
 @media (max-width: 1600px) {
@@ -270,7 +284,7 @@ footer {
         gap: 0;
 
         .article-image {
-            width: 70%;
+            width: 80%;
 
             .shape-3 {
                 width: 732px;
@@ -280,37 +294,6 @@ footer {
 }
 
 
-@media (max-width: 1200px){
-    .section-1 {
-        grid-template-columns: repeat(4, 300px);
-    }
-
-    .news .content {
-        grid-template-columns: repeat(6, 180px);
-
-        article {
-            grid-template-columns: repeat(6, 180px);
-
-            .article-content {
-                grid-column: span 3;
-                position: relative;
-                left: -120px;
-                width: 60%;
-            }
-        }
-
-        .more {
-            position: relative;
-            left: -120px;
-            grid-column: 4;
-        }
-    }
-
-    .news article .article-image .shape-3 {
-        width: 720px;
-    }
-}
-
 
 @media (min-width: 1601px) {
     .news .content {
@@ -318,6 +301,10 @@ footer {
 
         article {
             grid-template-columns: repeat(4, 250px);
+
+            .article-image img {
+                width: 100%;
+            }
         }
 
         .more {
@@ -325,6 +312,7 @@ footer {
         }
     }
 }
+
 
 @media (max-width: 1025px){
     header {
@@ -336,6 +324,14 @@ footer {
                 background: var(--blue-extra-light);
                 color: var(--blue-dark);
             }
+        }
+    }
+
+    article {
+        grid-template-columns: repeat(4, 250px);
+
+        &:not(:first-of-type) .article-image{
+            margin-top: -100px;
         }
     }
 
@@ -400,12 +396,18 @@ footer {
             grid-template-columns: 1fr;
 
             article {
-              grid-template-columns: 1fr;
-              grid-auto-rows: auto;
+                grid-template-columns: 1fr;
+                grid-auto-rows: auto;
+
+                &:not(:first-of-type) .article-image{
+                    position: relative;
+                    margin-top: 0px;
+                }
 
                 &:first-of-type .article-image,
                 &:last-of-type .article-image  {
                     border-radius: 0;
+                    
 
                     img {
                         border-radius: 0;
@@ -433,16 +435,20 @@ footer {
         .content {
             article {
                 .article-content {
+                    grid-column: span 3;
+                    position: relative;
                     left: 0;
                     width: 90%;
                     margin: 50px auto;
+                    
                 }
             }
 
             .more {
-                position: static;
+                
                 grid-column: 1;
                 text-align: center;
+                
             }
         }
     }
