--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -427,6 +427,8 @@ h1 {
     }
 
     .content {
+        display: flex;
+        flex-direction: column;
         grid-column: 1/6;
         grid-row: 1/4;
         position: relative;
@@ -445,34 +447,6 @@ h1 {
         p {
             margin-bottom: 30px;
             max-width: 500px;
-        }
-
-        button {
-            background: none;
-            border: 1px solid var(--green-bright);
-            color: var(--green-bright);
-            width: 150px;
-            height: 50px;
-            position: relative;
-            transition: 0.3s;
-
-            &::before {
-                content: "";
-                position: absolute;
-                top: -2%;
-                right: -49%;
-                width: 100%;
-                height: 105%;
-                background: url('/icons/arrow.svg');
-                background-size: contain;
-                background-repeat: no-repeat;
-                background-position: center;
-            }
-        }
-
-        button:hover {
-            background: var(--dark-green);
-            color: var(--green-spot);
         }
     }
 }
