--- a/src/styles/naujienos.scss
+++ b/src/styles/naujienos.scss
@@ -79,6 +79,17 @@ main {
 
             .left-top {
                 cursor: url('/icons/pointer-green.svg'), pointer;
+
+                svg {
+                    transform: rotate(180deg);
+                    transition: 0.3s;
+                }
+
+                &.show {
+                    svg {
+                        transform: rotate(0deg);
+                    }
+                }
             }
 
             .left-bottom {
