--- a/src/styles/naujienos.scss
+++ b/src/styles/naujienos.scss
@@ -77,6 +77,9 @@ main {
             top: 100px;
 
             .left-top {
+                display: flex;
+                align-items: center;
+                gap: 5px;
                 cursor: url('/icons/pointer-green.svg'), pointer;
 
                 svg {
@@ -135,7 +138,7 @@ main {
         .article-image {
             grid-column: 1/4;
             width: 90%;
-            max-height: 350px;
+            max-height: 450px;
             object-fit: cover;
         }
 
