--- a/src/styles/socialine-atsakomybe.scss
+++ b/src/styles/socialine-atsakomybe.scss
@@ -407,7 +407,9 @@ header {
     }
     
     .more {
+        cursor: url("/icons/pointer-blue.svg"), pointer;
         color: var(--blue-dark);
+        margin-top: 30px;
         &:hover {
             text-decoration: none;
             background: var(--blue-dark);
