--- a/src/styles/naujienos.scss
+++ b/src/styles/naujienos.scss
@@ -69,7 +69,7 @@ main {
         }
 
         .categories {
-            width: 250px;
+            min-width: 250px;
             display: flex;
             gap: 10px;
             grid-column: 3;
@@ -172,6 +172,7 @@ main {
         display: flex;
         align-items: center;
         gap: 10px;
+        margin-bottom: 150px;;
 
         span {
             opacity: 0.5;
@@ -281,23 +282,16 @@ main {
 }
 
 @media (max-width: 426px){
-
-   
-
-
     .news {
         grid-auto-rows: auto;
 
         h1 {
             margin-top: 150px;
+            margin-bottom: -100px;
         }
     
         .content {
             margin-top: 0px;
-        }
-
-        article .article-content {
-            margin-top: 0;
         }
     }
 }
